project/infra/k8s/polls-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: polls-mongo-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: polls-mongo
    template:
        metadata:
            labels:
                app: polls-mongo
        spec:
            containers:
                - name: polls-mongo
                  image: mongo

---
apiVersion: v1
kind: Service
metadata:
    name: polls-mongo-svc
spec:
    selector:
        app: polls-mongo
    ports:
        - name: db
          protocol: TCP
          port: 27017
          targetPort: 27017
