project/infra/k8s/questions-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: questions-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: questions
    template:
        metadata:
            labels:
                app: questions
        spec:
            containers:
                - name: questions
                  image: janpipan/questions

---
apiVersion: v1
kind: Service
metadata:
    name: questions-svc
spec:
    selector:
        app: questions
    ports:
        - name: questions
          protocol: TCP
          port: 3000
          targetPort: 3000
