project/infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-svc
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
        - host: polls.local
          http:
              paths:
                  - path: /api/polls/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: polls-svc
                            port:
                                number: 3000
                  - path: /api/answers/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: answers-svc
                            port:
                                number: 3000
                  - path: /api/questions/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: questions-svc
                            port:
                                number: 3000
                  - path: /api/events/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: event-bus-svc
                            port:
                                number: 3000
