project/infra/k8s/ingressFaas.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-svc
    namespace: openfaas-fn
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
        - host: polls.local
          http:
              paths:
                  - path: /faas/randName
                    pathType: Prefix
                    backend:
                        service:
                            name: js-fn
                            port:
                                number: 8080
